<resources>
    <string name="app_name">RobustaRoasting</string>
    <string name="app_description">Robusta Coffee Bean Roast Detection</string>
    <string name="app_version">1.0.0</string>
    <string name="menu">Menu</string>
    <string name="tools_description">Description</string>
    <string name="tools_permission">Set App Permission</string>
    <string name="tools_null_data">No value of data</string>
    <string name="tools_null_image">No image found</string>
    <string name="tools_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="tools_image_helper">com.robbyyehezkiel.robustaroasting.detection</string>
    <string name="tools_stored_image">Data stored successfully</string>
    <string name="tools_method_select">Object Detection</string>
    <string name="tools_camera">Camera</string>
    <string name="tools_gallery">Gallery</string>
    <string name="tools_upload">Upload photo</string>
    <string name="tools_detail_result">Detail Result</string>
    <string name="tools_light">Light</string>
    <string name="tools_medium">Medium</string>
    <string name="tools_dark">Dark</string>
    <string name="tools_percentage1">60%</string>
    <string name="tools_percentage2">30%</string>
    <string name="tools_percentage3">10%</string>
    <string name="tools_coffee_name">Robusta</string>
    <string name="tools_coffee">Robusta Coffee</string>
    <string name="tools_app_info">App Info</string>
    <string name="tools_quiz">Quiz</string>
    <string name="tools_quiz_coffee">Detect the roast type of your coffee beans</string>
    <string name="tools_question_description">What type of coffee bean roast do you like?</string>
    <string name="tools_answer">A: This is the right answer</string>
    <string name="tools_next">Next</string>
    <string name="tools_previous">Previous</string>
    <string name="tools_submit">Submit</string>
    <string name="tools_scan_coffee_bean">ROAST DETECTION</string>
    <string name="tools_preview_image">Preview Image</string>
    <string name="tools_close">Close</string>
    <string name="tools_settings">Settings</string>
    <string name="tools_language">Change Language</string>
    <string name="tools_copyright">\u00A9 Copyright</string>
    <string name="tools_university">Jambi University</string>
    <string name="fetching_failed_message">Error fetching data: %s</string>
    <string name="score">Your Score: 20</string>
    <string name="medium_roasting">Medium Roast</string>
    <string name="tools_roast">Roast</string>
    <string name="tools_coffee_bean">Robusta Coffee Bean</string>
    <string name="Temperature">Temperature</string>
    <string name="Color">Color</string>
    <string name="Aroma">Aroma</string>
    <string name="Flavour">Flavour</string>
    <string name="tools_download">Download Image</string>
    <string name="toolbar_detail_roast">Detail Roast</string>
    <string name="toolbar_detail_coffee">Detail Coffee</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_faq">Robusta Question</string>
    <string name="toolbar_about_app">About Application</string>
    <string name="toolbar_quiz_result">Result Quiz</string>
    <string name="toolbar_detection">Roast Detection</string>
    <string name="tools_info_detection_title">
        You have not choose any picture for roast detection
    </string>
    <string name="tools_info_detection_content">
        You can do some action by the following step : \n
        1. Click the method button to take the picture for roast detection \n
        2. Take the Robusta coffee bean picture \n
        3. Confirm picture \n
        4. Information dialog to display roast result detection
    </string>
    <string name="title_headline_introduction">Description</string>
    <string name="subtitle_headline_introduction">Robusta coffee, scientifically known as Coffea canephora, is one of the two primary species of coffee beans that dominate the global coffee market, the other being Arabica (Coffea arabica). Robusta coffee is renowned for its robust nature, strong flavor profile, and remarkable adaptability to diverse growing conditions. In this essay, we will delve into the world of Robusta coffee, exploring its origins, cultivation, distinctive characteristics, and its significant role in the coffee industry.</string>
    <string name="title_headline_origin">Origin and Cultivation</string>
    <string name="subtitle_headline_origin">Robusta coffee traces its roots to the central and western regions of sub-Saharan Africa, specifically in the areas that now constitute countries like Uganda, Congo, and Ivory Coast. Unlike its more delicate counterpart, Arabica, which thrives at higher altitudes and temperate climates, Robusta coffee flourishes in lower elevations and can endure a wider range of temperatures. This resilience has made it a favored choice for cultivation in regions where Arabica struggles to thrive, including lowland areas in Asia, Africa, and parts of South America.</string>
    <string name="title_headline_distinctive">Distinctive Characteristics</string>
    <string name="subtitle_headline_distinctive">One of the most defining characteristics of Robusta coffee is its flavor profile. Robusta beans tend to have a strong, bitter taste with a distinct nutty, woody, and earthy flavor. This robust flavor is partly due to its higher caffeine content, which can be almost double that of Arabica beans. The increased caffeine content also contributes to Robusta\'s natural resistance to pests and diseases, making it easier and less expensive to cultivate.</string>
    <string name="title_headline_industry">Role in the Coffee Industry</string>
    <string name="subtitle_headline_industry">Robusta coffee has a vital role in the coffee industry, primarily due to its hardiness and cost-effectiveness. It is often used in instant coffee production and as a filler in various coffee blends. Its higher caffeine content also makes it desirable for those seeking a quick energy boost. Moreover, Robusta\'s resistance to diseases and pests reduces the need for extensive chemical treatments, aligning with sustainable and environmentally friendly coffee farming practices.</string>
    <string name="menuAppInfo">first menu</string>
    <string name="menuRobusta">second menu</string>
    <string name="menuQuiz">third menu</string>
    <string name="menuSettings">fourth menu</string>
    <string-array name="data_id">
        <item>@string/menuRobusta</item>
        <item>@string/menuQuiz</item>
        <item>@string/menuAppInfo</item>
        <item>@string/menuSettings</item>
    </string-array>
    <string-array name="data_name">
        <item>@string/tools_coffee_name</item>
        <item>@string/tools_quiz</item>
        <item>@string/tools_app_info</item>
        <item>@string/tools_settings</item>
    </string-array>
    <string name="light_title">Light Roast</string>
    <string name="light_description">Light roast robusta coffee is a distinctive and invigorating brew celebrated for its unique characteristics. Grown primarily in regions with tropical climates, this coffee variety is known for its bold and earthy flavors. The light roasting process preserves the robusta beans\' inherent attributes, resulting in a cup that exudes a pleasantly sharp acidity, a medium body that is velvety on the palate, and intriguing notes of toasted grains and nuts. With a higher caffeine content compared to arabica beans, light roast robusta coffee offers an energetic and robust experience, making it an ideal choice for those seeking a vibrant and full-bodied morning indulgence.</string>
    <string name="light_temperature">180°C to 205°C</string>
    <string name="light_color">Lightly roasted robusta coffee beans exhibit a pale, straw-like color with a hint of light brown. They maintain a dry appearance, and their surface might show slight unevenness in color, with areas of pale tan and subtle yellow undertones. The beans still retain much of their original moisture content, and there\'s minimal presence of oils on the surface. The overall impression is one of brightness and crispness, indicating a roast that preserves the bean\'s intrinsic flavors and acidity.</string>
    <string name="light_flavour">Light roast robusta coffee beans offer a delicate and nuanced experience. The inherent flavors of the beans shine through, showcasing vibrant acidity and lively, fruity or floral notes. The taste is often bright and crisp, with a noticeable tartness that might remind you of citrus or berries. Undertones of toasted grains, nuts, and subtle earthiness can also be detected. The overall impression is one of subtlety, highlighting the unique characteristics of the bean\'s origin.</string>
    <string name="light_aroma">Light roast robusta coffee beans offer a fragrant and delicate aroma. The scent is often vibrant and lively, with prominent floral and fruity notes that evoke images of fresh blossoms and ripe berries. The aroma might also carry a hint of toasted grains or nuts, adding depth to the sensory experience. There\'s a sense of brightness and clarity in the aroma, reflecting the bean\'s origin and preserving the natural essences of the coffee.</string>
    <string name="medium_title">Medium Roast</string>
    <string name="medium_description">Medium roast robusta coffee presents an enticing harmony of flavors and aromas, showcasing the rich potential of robusta beans. Cultivated primarily in tropical climates, this coffee variety is renowned for its robust nature. Through the meticulous medium roasting process, the beans reveal a well-balanced profile characterized by a moderate yet lively acidity, a substantial body that coats the palate smoothly, and a captivating fusion of nutty undertones with hints of chocolate and earthy notes. Striking a balance between the inherent robustness of the beans and the transformative effects of roasting, medium roast robusta coffee delivers a satisfying and invigorating experience, making it an excellent choice for aficionados desiring both depth and vibrancy in their cup.</string>
    <string name="medium_temperature">210°C to 220°C</string>
    <string name="medium_color">Moving into the medium roast territory, robusta coffee beans take on a deeper shade of brown, resembling that of rich cocoa or a warm walnut hue. The beans become smoother in texture as oils begin to emerge and spread across their surface. These oils give the beans a slight glossiness, reflecting the light in a gentle manner. The beans might display some small surface cracks, and their overall appearance suggests a harmonious blend between the bean\'s original attributes and the flavors imparted by the roasting process.</string>
    <string name="medium_flavour">Medium roast robusta coffee beans strike a balance between the original flavors of the bean and the transformative effects of roasting. You can expect a smoother and more rounded flavor profile compared to lighter roasts. The acidity becomes more subdued, giving way to a pleasant blend of caramelized sweetness and a moderate body. The nutty undertones become more pronounced, often accompanied by hints of chocolate, cocoa, and possibly even a touch of spiciness. The result is a harmonious cup with a satisfying depth and complexity.</string>
    <string name="medium_aroma">Medium roast robusta coffee beans showcase a well-rounded and inviting aroma. The scent becomes warmer and richer, with the emergence of caramelized sweetness. You might detect notes of brown sugar, toffee, or even a touch of honey. The aroma is often accompanied by the comforting presence of roasted nuts, providing a sense of depth and complexity. A subtle undertone of cocoa or chocolate can also be present, contributing to the inviting nature of the cup.</string>
    <string name="dark_title">Dark Roast</string>
</resources>