<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashScreenActivity">

    <ImageView
        android:id="@+id/ed_item_splash"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/image_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tools_description" />

    <TextView
        android:id="@+id/ed_title_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/frame3"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_item_splash" />

    <TextView
        android:id="@+id/ed_subtitle_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/app_description"
        android:textColor="@color/frame2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ed_title_splash"
        app:layout_constraintStart_toStartOf="@+id/ed_title_splash"
        app:layout_constraintTop_toBottomOf="@+id/ed_title_splash" />
</androidx.constraintlayout.widget.ConstraintLayout>