<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/option_item_selected_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/ed_preview_image_title"
        style="@style/HeadlineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tools_preview_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ed_preview_image_close_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@color/color_danger"
        android:contentDescription="@string/tools_description"
        android:padding="4dp"
        android:src="@drawable/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/ed_preview_image_content"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:contentDescription="@string/tools_description"
        android:src="@drawable/image_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_preview_image_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ed_preview_image_download_button"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/icon_download"
        android:text="@string/tools_download"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_preview_image_content" />

</androidx.constraintlayout.widget.ConstraintLayout>